implement winscp lib

--- a/FileDownloader/Config.ini
+++ b/FileDownloader/Config.ini
@@ -1,22 +1,47 @@
-﻿[FtpConfig]
+﻿#[FtpConfig]
 Protocol=ftp://
 Username=user1
 Password=admin
-Host=127.0.0.1/
-#Host=10.12.32.31/
-RemoteDirectory=
+Host=127.0.0.1
+Fingerprint=
+RemoteDirectory=/ #klo di root
 DownloadDirectory=D:/SDD/DigiCSDummy/Archive/
 TempDirectory=D:/SDD/DigiCSDummy/Temp/
 TargetDirectory=D:/SDD/DigiCSDummy/
 LogDirectory=D:/SDD/DigiCSDummy/Log/
+
+[FtpConfig]
+Protocol=ftp://
+Username=us/er1
+Password=@dmin
+Host=127.0.0.1
+Fingerprint=
+RemoteDirectory=/ #klo di root
+DownloadDirectory=D:\SDD\DigiCSDummy\Archive\
+TempDirectory=D:\SDD\DigiCSDummy\Temp\
+TargetDirectory=D:\SDD\DigiCSDummy\
+LogDirectory=D:\SDD\DigiCSDummy\Log\
 
 #[FtpConfig]
 Protocol=ftp://
 Username=swdftp1
 Password=swdftp234
 Host=10.12.4.164/
+Fingerprint=
 RemoteDirectory=DIGICSLITE
 DownloadDirectory=D:/SDD/DOWNLOADED/Archive/
 TempDirectory=D:/SDD/DOWNLOADED/Temp/
 TargetDirectory=D:/SDD/DOWNLOADED/
 LogDirectory=D:/SDD/DOWNLOADED/Log/
+
+#[FtpConfig]
+Protocol=sftp://
+Username=root
+Password=bni1234%2f
+Host=192.168.172.85/
+Fingerprint=ssh-ed25519 255 Qh+7f1+MdElZVp+owaWxKa8c2U9qhhxQpbj2rLxbgnc
+RemoteDirectory=/root/FTP-digicsLite/
+DownloadDirectory=/Archive/
+TempDirectory=/Temp/
+TargetDirectory=
+LogDirectory=/Log/
