--- a/FileDownloader/Config.ini
+++ b/FileDownloader/Config.ini
@@ -12,15 +12,19 @@ LogDirectory=D:/SDD/DigiCSDummy/Log/
 
 [FtpConfig]
 Protocol=ftp://
-Username=us/er1
-Password=@dmin
+Username=root
+Password=bni1234/
 Host=127.0.0.1
 Fingerprint=
 RemoteDirectory=/ #klo di root
-DownloadDirectory=D:\SDD\DigiCSDummy\Archive\
-TempDirectory=D:\SDD\DigiCSDummy\Temp\
-TargetDirectory=D:\SDD\DigiCSDummy\
-LogDirectory=D:\SDD\DigiCSDummy\Log\
+#DownloadDirectory=D:\SDD\DigiCSDummy\Archive\
+#TempDirectory=D:\SDD\DigiCSDummy\Temp\
+#TargetDirectory=D:\SDD\DigiCSDummy\
+#LogDirectory=D:\SDD\DigiCSDummy\Log\
+DownloadDirectory=D:\SDD\MultiPartRar\Archive\
+TempDirectory=D:\SDD\MultiPartRar\Temp\
+TargetDirectory=D:\SDD\MultiPartRar\extracted\
+LogDirectory=D:\SDD\MultiPartRar\Log\
 
 #[FtpConfig]
 Protocol=ftp://
@@ -45,3 +49,9 @@ DownloadDirectory=/Archive/
 TempDirectory=/Temp/
 TargetDirectory=
 LogDirectory=/Log/
+
+#directories
+DownloadDirectory=
+TempDirectory=
+TargetDirectory=
+LogDirectory=
