implement multipart files handler - not tested

--- a/FileDownloader/Config.ini
+++ b/FileDownloader/Config.ini
@@ -12,8 +12,10 @@ LogDirectory=D:/SDD/DigiCSDummy/Log/
 
 [FtpConfig]
 Protocol=ftp://
-Username=root
-Password=bni1234/
+#Username=root
+#Password=bni1234/
+Username=user1
+Password=admin
 Host=127.0.0.1
 Fingerprint=
 RemoteDirectory=/ #klo di root
