update : add exectime

--- a/FileDownloader/Config.ini
+++ b/FileDownloader/Config.ini
@@ -10,15 +10,13 @@ TempDirectory=D:/SDD/DigiCSDummy/Temp/
 TargetDirectory=D:/SDD/DigiCSDummy/
 LogDirectory=D:/SDD/DigiCSDummy/Log/
 
-[FtpConfig]
-Protocol=ftp://
-#Username=root
-#Password=bni1234/
-Username=user1
-Password=admin
-Host=127.0.0.1
-Fingerprint=
-RemoteDirectory=/ #klo di root
+#[FtpConfig]
+Protocol=sftp://
+Username=root
+Password=bni1234/
+Host=192.168.172.85
+Fingerprint=ssh-ed25519 255 Qh+7f1+MdElZVp+owaWxKa8c2U9qhhxQpbj2rLxbgnc
+RemoteDirectory=/root/FTP/ #klo di root
 #DownloadDirectory=D:\SDD\DigiCSDummy\Archive\
 #TempDirectory=D:\SDD\DigiCSDummy\Temp\
 #TargetDirectory=D:\SDD\DigiCSDummy\
@@ -28,13 +26,29 @@ TempDirectory=D:\SDD\MultiPartRar\Temp\
 TargetDirectory=D:\SDD\MultiPartRar\extracted\
 LogDirectory=D:\SDD\MultiPartRar\Log\
 
+[ConnectionConfig]
+ConnectionUrl=http://192.168.172.85:8082
+PathGetExecTime=/util/getbygroup/EXECTIME
+
 #[FtpConfig]
 Protocol=ftp://
 Username=swdftp1
 Password=swdftp234
 Host=10.12.4.164/
 Fingerprint=
-RemoteDirectory=DIGICSLITE
+RemoteDirectory=/digicsliteupdater
+DownloadDirectory=D:/SDD/DOWNLOADED/Archive/
+TempDirectory=D:/SDD/DOWNLOADED/Temp/
+TargetDirectory=D:/SDD/DOWNLOADED/
+LogDirectory=D:/SDD/DOWNLOADED/Log/
+
+[FtpConfig]
+Protocol=sftp://
+Username=root
+Password=SddLinux2022!
+Host=10.12.4.164
+Fingerprint=ssh-ed25519 255 O7SZXm7QDB2T5WAuddi7JRpEGF4rG1ImKk/DtEq82so
+RemoteDirectory=/root/digicsliteupdater/
 DownloadDirectory=D:/SDD/DOWNLOADED/Archive/
 TempDirectory=D:/SDD/DOWNLOADED/Temp/
 TargetDirectory=D:/SDD/DOWNLOADED/
